<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="decibel_format">%1$.1f dB</string>
    <string name="sample_imgtxt">Sample Image</string>
    <string name="sample_address">315 Olson Way, Sunnyvale</string>
    <string name="tap_foroption">Tap for options</string>
    <string name="swipe_foroption">Swipe for options</string>
    <string name="swipe_forward_survey">Swipe forward to start survey</string>
    <string name="swipe_down_summary">Swipe down for summary</string>
    <string name="swipe_forward_capture">Swipe forward to capture fields</string>
    <string name="tap_open">Tap to open</string>
    <string name="swipe_forward">Swipe to Forward</string>
    <string name="swipe_forward_claim">Swipe forward for claims summary</string>
    <string name="tap_record">Tap to record input</string>
    <string name="tap_options">Tap for options</string>
    <string name="shared_memo_key">bundlesinfo</string>
    <string name="proof_demage">Proof of damage</string>
    <string name="app_name">Survey Claims</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="claim_dashboard">View Claims Summary</string>
    <string name="queue_count">Queue Count:  %1$d</string>
    <string name="risk_assno">Risk Assessment:  %1$s</string>
    <string name="claim_no">Assessment#</string>
    <string name="claim_name">Account Name</string>
    <string name="claim_status">Status#</string>
    <string name="title_info">Claim Information</string>
    <string name="policy_no">Policy Number:</string>
    <string name="survey_no">Survey Number:</string>
    <string name="cause_loss">Cause Of Loss</string>
    <string name="address">Address:</string>
    <string name="reported_by">Reported By:</string>
    <string name="start_survey">Start Survey</string>
    <string name="take_photo">Take Photo</string>
    <string name="weather_report">Weather Report</string>
    <string name="record_video">Record Video</string>
    <string name="record_memo">Record Memo</string>
    <string name="btnsave">Save</string>
    <string name="btncancel">Cancel</string>
    <string name="claim_number">Claim Number</string>
    <string name="claimant">Claimant</string>
    <string name="loss_date">Loss Date</string>
    <string name="status">Status</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="survey_date">Survey Date</string>
    <string name="sample_date">08-27-2014</string>
    <string name="extent_damage">Extent of damage</string>
    <string name="title_activity_extent_damage">ExtentDamageActivity</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="roof_type">Roof Type</string>
    <string name="cause_damage">Cause of damage</string>
    <string name="start_recording">Record Memo</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="sample_txt">lorem lorem ipsumlorem lorem ipsumlorem lorem ipsumlorem lorem ipsumlorem lorem ipsumlorem lorem ipsumlorem lorem ipsum</string>
    <string name="open_claim">Open Claim</string>
    <string name="open_claim_txt">You might be interested in </string>
    <string name="sample_claimnumber"> CL-008364</string>
    <string name="sample_remaning_txt">for claimant</string>
    <string name="sample_name">John Waternoose</string>
    <string name="sample_place">Sunnyvale</string>
    <string name="sample_remaning_txt1">in</string>
    <string name="notify">Your next appointment is 2 hours away</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="hail_fall">Hail Fall Detected</string>
    <string name="hail_degree">0.88 D</string>
    <string name="hail_hour">1 Minute</string>
    <string name="sample_olddate"> 05-21-2012</string>
    <string name="no_hail">No Hail Fall</string>
    <string name="histroy">Historical</string>
    <string name="exten_demage">Swipe forward for next field</string>
    <string name="swipe_proofs">Swipe forward to record proofs</string>
    <string name="swipe_go_back">Swipe down  to go  back</string>
    <string name="swipe_forward_loss_date">Swipe forward for report options</string>

</resources>