<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/map_view"
        android:layout_width="240px"
        android:layout_height="360px"
        android:src="@drawable/map_slide7" />

    <RelativeLayout
        android:id="@+id/content_view"
        android:layout_width="400px"
        android:layout_height="360px"
        android:layout_marginLeft="20px"
        android:layout_marginTop="30px"
        android:layout_toRightOf="@+id/map_view" >

        <TextView
            android:id="@+id/hail_falldate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4pt"
            android:text="@string/sample_date"
            android:textColor="@color/title"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/hail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hail_falldate"
            android:text="@string/sample_address"
            android:textColor="@color/title"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/nohailfall"
            android:src="@drawable/no_hail_fall" />

        <TextView
            android:id="@+id/nohailfall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hail_address"
            android:layout_marginLeft="10px"
            android:layout_marginTop="45px"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/no_hail"
            android:textColor="@color/nohail"
            android:textSize="20dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/content_view"
        android:layout_marginBottom="10px"
        android:layout_marginRight="40px"
        android:layout_marginTop="10px"
        android:text="@string/swipe_go_back"
        android:textColor="@color/swipe_option"
        android:textSize="18sp" />

</RelativeLayout>