<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:keepScreenOn="true"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/header_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal" >

        <!-- <TextView -->
        <!-- android:id="@+id/claim_number" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignParentRight="true" -->
        <!-- android:layout_alignParentTop="true" -->
        <!-- android:layout_marginRight="15dp" -->
        <!-- android:text="@string/claim_number" -->
        <!-- android:textColor="@color/title" -->
        <!-- android:textSize="18sp" /> -->

        <TextView
            android:id="@+id/lbltxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/claim_number"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/cause_damage"
            android:textColor="@color/title"
            android:textSize="22sp" />

        <ViewSwitcher
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbltxt"
            android:background="@drawable/separator" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtdamage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_view"
        android:layout_marginLeft="13dp"
        android:textColor="@color/openclaim_txt"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="13dp"
        android:text="@string/tap_record"
        android:textColor="@color/title"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="13dp"
        android:text="@string/exten_demage"
        android:textColor="@color/swipe_option"
        android:textSize="18sp" />

</RelativeLayout>